Updated Comic book view to properly show Description

--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -25,10 +25,10 @@
 <body>
     <div>
         <h1>@seriesTitle</h1>
-        <h2>@issueNumber</h2>
+        <h2>Issue #@issueNumber</h2>
 
         <h5>Description:</h5>
-        <div>@description</div>
+        <div>@Html.Raw(description)</div>
 
         <h5>Artists:</h5>
         <div>@artists</div>
